tests/specs/ecosystem/samjmck/tobcalc_lib/1_0_7.test
samjmck/tobcalc-lib/1.0.7
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/worker.ts:6:7
  | 
6 | const workerMessageEventListener = async (event: MessageEvent) => {
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: async functions without a return statement can have a return type of either 'Promise<void>' or 'Promise<never>'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


